--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -17,6 +17,8 @@ WORKDIR /app
 COPY --from=builder /build/server /app/server
 COPY --from=builder /build/config/config.yml /app/config/config.yml
 COPY --from=builder /build/static/image/* /app/static/image/
+COPY --from=builder /build/dist/* /app/dist/
+
 
 EXPOSE 9001
 
